--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- Vídeo de fundo -->
-  <video autoplay muted loop id="bg-video">
-    <source src="video/video.mp4" type="video/mp4">
-  </video>
+  
+<video autoplay muted loop playsinline>
+  <source src="video.mp4" type="video/mp4">
+  Seu navegador não suporta vídeo.
+</video>
+
 
   <div class="container">
     <h1>mensagem especial💖</h1>
@@ -37,3 +39,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
