--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
   
-<video autoplay muted loop playsinline>
-  <source src="video.mp4" type="video/mp4">
-  Seu navegador não suporta vídeo.
-</video>
+  <!-- Vídeo de fundo -->
+  <video autoplay muted loop id="bg-video">
+    <source src="video/video.mp4" type="video/mp4">
+  </video>
 
 
   <div class="container">
