--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pedido Especial ❤️</title>
+  <title>Mensagem Especial❤️</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -37,3 +37,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
